# LSDJam24

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  build.sh  cmake_install.cmake  compile_commands.json  debug.sh  reload.sh  run.sh
.cache/clangd/index/: AABBTreeBuilder.cpp.6EFAD2C4B17FB379.idx  AABBTreeBuilder.h.E8C2FCDE5899942C.idx  AABBTreeToBuffer.h.64D23823EF635CDE.idx  AABox.h.B73A4C938D1A05E0.idx  AABox4.h.3C64C2BDD027CBF8.idx  AABoxCast.h.8FF5D9AA2BA6E6C6.idx  ARMNeon.h.F555CA4473A7D0E2.idx  ActiveEdgeMode.h.20C3AAAA22127490.idx  ActiveEdges.h.13FD3C0E48573F6E.idx  AllowedDOFs.h.B529ABA446897844.idx  AngleConstraintPart.h.4053AF8FB351440D.idx  Array.h.9E76A3F52D909885.idx  Atomics.h.5818D82E1D0BD62E.idx  AxisConstraintPart.h.9D273D1180CECEF8.idx  BackFaceMode.h.C09FED5FBE866763.idx  Body.cpp.6D6F60B8FCF2031C.idx  Body.h.CC2905F11DFE93E1.idx  Body.inl.D589B7FE2AC13EE4.idx  BodyAccess.h.7BE0C74B66C2ED62.idx  BodyActivationListener.h.5F20FF2E9DAAD27A.idx  BodyCreationSettings.cpp.1618D5E08329730F.idx  BodyCreationSettings.h.4BDBD2A3DBEB0289.idx  BodyFilter.h.AAF0B9BCB33895C1.idx  BodyID.h.CAA626CFA296F9F4.idx  BodyInterface.cpp.905F0876C1AAF3F2.idx  BodyInterface.h.37017BE1B814FE0F.idx  BodyLock.h.C8D0F3D39436FE3F.idx  BodyLockInterface.h.896174AE1EB35599.idx  BodyLockMulti.h.CA9B611BAA30C60C.idx  BodyManager.cpp.6426C95E2B03C573.idx  BodyManager.h.25579F3FF641DF3E.idx  BodyPair.h.0EB2A0F3841AE722.idx  BodyType.h.D4C3E301A6E67EA9.idx  BoxShape.cpp.9830358241203AA3.idx  BoxShape.h.D237453113381FD9.idx  (+775 more)
includes/: PH_PCH.h
includes/Components/: Components.h
includes/Core/: CoreFwd.h  GameObject.h  Log.h  ecs.h
includes/Objects/: GameObject.h
includes/Systems/: Systems.h
sources/: ecs.h  main.cpp  systems.h
sources/Components/: InputComponent.h  PhysicsComponent.h  TransformComponent.h
sources/Core/: GameObject.cpp  Log.cpp  Log.h
sources/Systems/: InputSystem.cpp  InputSystem.h  PhysicsSystem.h  RenderingSystem.cpp  RenderingSystem.h  Systems.cpp
